tests/ui/mismatched_types/closure-arg-type-mismatch-issue-45727.rs
//@ run-rustfix
fn main() {
    let _ = (-10..=10).find(|x: i32| x.signum() == 0); //~ ERROR type mismatch in closure arguments
    let _ = (-10..=10).find(|x: &&&i32| x.signum() == 0); //~ ERROR type mismatch in closure arguments
}
